--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <body>
 Welcome!
+<br>
+Please find a link to my work experiences: https://docs.google.com/document/d/1N6xJBznTvJHbtIqy08ARMGwj3WVLFh2GBepPbQ8zarw/edit?usp=sharing
 </body>
 </html>
